logs/rtt.20260322-115938.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS)
error[E0432]: unresolved import `vstd::arithmetic::power::pow`
  --> src/Chap47/QuadProbFlatHashTableStEph.rs:23:9
   |
23 |     use vstd::arithmetic::power::pow;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `pow` in `arithmetic::power`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `apas-verus` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `apas-verus` (lib test) due to 1 previous error
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 8s
